--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "scrape": "node scrape.js",
     "merge": "node utils/merge.js",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -28,6 +30,7 @@
     "stopword": "^3.1.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "nodemon": "^3.1.10"
   }
 }
