--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "az-dsa-search-engine",
+  "name": "dsa-search-engine",
   "version": "1.0.0",
   "description": "A DSA problem search engine leveraging web scraping, efficient data storage, and a Node.js backend implementing TF-IDF to provide relevant results for user queries via a React web interface.",
-  "homepage": "https://github.com/aaqib605/az-dsa-search-engine#readme",
-  "bugs": {
-    "url": "https://github.com/aaqib605/az-dsa-search-engine/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aaqib605/az-dsa-search-engine.git"
-  },
-  "license": "ISC",
-  "author": "Aaqib Javaid",
+  "license": "MIT",
+  "author": "Rudra Pandya",
   "type": "module",
   "main": "index.js",
   "scripts": {
