--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "merge": "node utils/merge.js",
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "build": "node build.js",
     "test": "playwright test",
     "test:ui": "playwright test --ui"
   },
